in progress of adding table

--- a/firebase.json
+++ b/firebase.json
@@ -9,6 +9,9 @@
     "rewrites": [ {
       "source": "/registerMarks",
       "function": "registerMarks"
+    } , {
+      "source": "/getMarks",
+      "function": "getMarks"
     } ]
   },
   "firestore": {
